[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 4.37114e-08, -7.57103e-08, 0, 0.866025, 0.5, 8.74228e-08, 0.5, -0.866025, 0, 2.16455, -4.99285 )

[node name="UserInterface" type="Node" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UserInterface"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 60.0
margin_bottom = -60.0

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/MarginContainer"]
margin_right = 200.0
margin_bottom = 480.0

[node name="Button" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
text = "Red Ball"

[node name="Button2" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Green Ball"

[node name="Button3" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "Red Cube"

[node name="Button4" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 92.0
text = "Green Cube"

[node name="Button5" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 116.0
text = "Random Color Ball"

[node name="Button6" type="Button" parent="UserInterface/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 140.0
text = "Random colors"

[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="UserInterface/MarginContainer/VBoxContainer/Button6" to="." method="_on_Button6_pressed"]
